<resources>
    <string name="app_name">CroEng Dictionary</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="saved">Saved words</string>
    <string name="history">History</string>
    <string name="quiz">Quiz</string>
    <string name="dictionary">Dictionary</string>
    <string name="wordOfTheDay">Word of the day</string>
    <string name="header_title">Croatian-English Dictionary</string>
    <string name="hrv">hrv</string>
    <string name="placeholder">placeholder</string>
    <string name="score">Score: </string>
    <string name="eng">eng</string>
    <string name="hrvv">HRV</string>
    <string name="engg">ENG</string>
    <string name="engWord">eng rijec</string>
    <string name="hrvWord">hrv rijec</string>
    <string name="start">Start</string>
    <string name="lost">Game over!</string>
    <string name="theme">Theme</string>
    <string name="TextSize">Text size</string>
    <string name="touch_to_type">Touch to type</string>
</resources>