<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAEBF3"
    tools:context=".HomeFragment">


    <RadioGroup
        android:id="@+id/textTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/textTranslationHrv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/hrv"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="60sp" />

        <RadioButton
            android:id="@+id/textForTranslationEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eng"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E10D55"
            android:textSize="60sp" />

    </RadioGroup>

    <Button
        android:id="@+id/quizStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:text="@string/start"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTranslation" />

</androidx.constraintlayout.widget.ConstraintLayout>