<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAEBF3"
    android:gravity="center"
    tools:context=".HomeFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="270dp"
        app:cardBackgroundColor="#F8BCBC"
        app:cardCornerRadius="50dp"
        app:cardElevation="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/words"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/wordOfTheDay"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="37sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_frag_eng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/engWord"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/home_frag_hr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/hrvWord"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>